--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from forecastr-io.herokuapp.com/app/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 May 2020 08:55:03 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-    <title>Forecastr App: Let's Build a Time Series Forecast</title>
+    <title>SIRIUS Self Service Forecast Tool</title>
     <meta name="description" content="Create a time series forecast in 3 steps from within a UI.">
     <meta name="robots" content="index, follow" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -59,13 +59,13 @@
 
             <div class="header">
 
-                <h3 class="data-narrative-logo">forecastr<span class='alpha'>ALPHA</span></h3>
+                <h3 class="data-narrative-logo">forecast<span class='alpha'>by SIRIUS</span></h3>
 
                 <nav>
                     <ul class="nav-bar">
-                        <li><a class='nav-link aboutapp' href="https://forecastr-io.herokuapp.com/">about app</a></li>
-                        <li><a class='nav-link feedback-link' href="https://goo.gl/forms/9Dx5dAMzCtF2yXAy2">feedback</a></li>
-                        <li><a class='nav-link partner-with-me' href="https://www.linkedin.com/in/garethcull/">NEED AN ANALYTICS PARTNER?</a></li>
+                        <li><a class='nav-link aboutapp' href="https://forecastr-io.herokuapp.com/">feedback</a></li>
+                        <li><a class='nav-link feedback-link' href="ai.bsh-group.com">portfolio</a></li>
+                        <li><a class='nav-link partner-with-me' href="ai.bsh-group.com">See more SIRIUS analytical solutions</a></li>
                     </ul>
                 </nav>
 
@@ -173,17 +173,17 @@
 
                         <div id='stats-summmary'>
 
-                            <h5 id='original-data-chart-title' class='sub-header'>INSERT TITLE</h5>
+                            <h5 id='original-data-chart-title' class='sub-header'>Historical data: Number of Installations</h5>
                             <div id='build-basic-forecast'>
-
-                                <canvas id="originalChart"></canvas>
+                                <img id='expected-output-pic' src="https://facebook.github.io/prophet/static/quick_start_files/quick_start_14_0.png"/
+                                width="50" height="500">
                                 <h5>SUMMARY STATISTICS ABOUT YOUR DATA</h5><br/>
 
                                 <ol class='helpful-stats'>
-                                    <li class='helpful-title mean'>Mean<br><span id='metrics-mean' class='summary-data'>--</span></li>
-                                    <li class='helpful-title std'>Std<br><span id='metrics-std' class='summary-data'>--</span></li>
-                                    <li class='helpful-title min'>Min<br><span id='metrics-min' class='summary-data'>--</span></li>
-                                    <li class='helpful-title max'>Max<br><span id='metrics-max' class='summary-data'>--</span></li>
+                                    <li class='helpful-title mean'>Mean<br><span id='metrics-mean' class='summary-data'>23</span></li>
+                                    <li class='helpful-title std'>Std<br><span id='metrics-std' class='summary-data'>3.4</span></li>
+                                    <li class='helpful-title min'>Min<br><span id='metrics-min' class='summary-data'>5</span></li>
+                                    <li class='helpful-title max'>Max<br><span id='metrics-max' class='summary-data'>38</span></li>
                                 </ol>
 
                             </div>
@@ -234,12 +234,12 @@
                             <div id='chart-container'>
 
                                 <br/>
-                                <h5 id='chart-title' class='sub-header'>INSERT TITLE</h5>
-                                <img id="loading" src="https://forecastr-io.herokuapp.com/static/img/loading.gif"/>
+                                <h5 id='chart-title' class='sub-header'>Installation predictions for next month</h5>
+                                <img id="loading" src="https://facebook.github.io/prophet/static/seasonality,_holiday_effects,_and_regressors_files/seasonality,_holiday_effects,_and_regressors_38_0.png"/>
                                 <p id='processing'>
                                 Your forecast is being built. Larger datasets may experience wait times of up to 1 minute in the Alpha Version of this site.
                                 </p>
-                                <canvas id="myChart"></canvas>
+                                <img id="loading" src="https://miro.medium.com/max/1200/1*BJrZeinNYZcb2WFq5ZbNHg.png"/ width="600" height="300">
 
                             <!-- Previous vs Future Dropdown Stats -->
 
