--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <nav>
                     <ul class="nav-bar">
                         <li><a class='nav-link aboutapp' href="https://forecastr-io.herokuapp.com/">feedback</a></li>
-                        <li><a class='nav-link feedback-link' href="ai.bsh-group.com">portfolio</a></li>
-                        <li><a class='nav-link partner-with-me' href="ai.bsh-group.com">See more SIRIUS analytical solutions</a></li>
+                        <li><a class='nav-link feedback-link' href="https://ai.bsh-group.com">portfolio</a></li>
+                        <li><a class='nav-link partner-with-me' href="https://ai.bsh-group.com">See more SIRIUS analytical solutions</a></li>
                     </ul>
                 </nav>
 
